# country-compare

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.backend  Dockerfile.ui  Makefile  README.md  compose.api.yml  compose.yaml  docker-compose.yml  pyproject.toml  requirements-dev.txt
.github/workflows/: ci.yaml  deploy-api.yaml  deploy-llm-forecast.yaml
config/: metrics.yaml  metrics_test.yaml  scoring.yaml  scoring_profiles.yaml  scoring_profiles_test.yaml
config/source_manifests/: world_bank_real_data.yaml
country_compare/: paths.py  types.py
country_compare/api/: main.py  serialization.py
country_compare/cli/: __init__.py  config.py  data.py  demo.py  main.py  ui.py
country_compare/clients/: base.py
country_compare/comparison/: __init__.py  multi_metric.py  single_metric.py
country_compare/config/: __init__.py  loader.py  models.py  validator.py
docs/: api.md  api_examples.md  api_operational_settings.md  architecture.md  configuration.md  containerization.md  data_contract.md  dataset_replacement.md  demo_walkthrough.md  deployment_api.md  development.md  getting_started.md  index.md  llm_forecast_service.md  manual_qa.md  prediction.md  prediction_methods.md  release_notes_v0_1_beta.md  release_notes_v1_0_0.md  runtime-refresh.md  testing.md  troubleshooting.md  user_guide.md
notebooks/: 01_single_metric.ipynb  02_multi_metric.ipynb  03_weighted_score.ipynb
scripts/: check_static_guards.py  dataset_manifest_script.py  demo_flow.py  generate_data_correctness_report.py  generate_golden_value_candidates.py  generate_metadata_catalog.py  run_phase10_demo.py  run_phase7_demo.py  smoke_api_container.py  update_parquet_data.py  update_parquet_data_wb.py
services/llm_forecast_service/: Dockerfile  Makefile  README.md  pyproject.toml
services/llm_forecast_service/src/llm_forecast_service/: __init__.py  errors.py  limits.py  main.py  metrics.py  privacy.py  schemas.py  security.py  settings.py  validation.py
services/llm_forecast_service/src/llm_forecast_service/providers/: __init__.py  base.py  mistral.py
services/llm_forecast_service/tests/: conftest.py  test_backpressure.py  test_forecast_route.py  test_health_ready_security.py  test_limits_validation.py  test_metrics.py  test_mistral_provider.py  test_privacy.py  test_provider_metadata.py  test_runtime_hardening.py  test_safe_metadata.py  test_schema_bounds.py  test_settings.py
services/llm_forecast_service/tests/api/: test_error_responses.py  test_forecast_route.py  test_health_ready_security.py  test_request_context.py  test_runtime_hardening.py
services/llm_forecast_service/tests/unit/: test_metrics_buckets.py  test_privacy.py
tests/: conftest.py  test_cli_smoke.py  test_comparison_service.py  test_contract.py  test_filtering.py  test_manifests.py  test_multi_metric.py  test_normalization.py  test_pipelines_aquisition.py  test_pipelines_engine.py  test_pipelines_manifests.py  test_pipelines_runners.py  test_presentation_service.py  test_scoring.py  test_services_config_service.py  test_services_dataset_service.py  test_services_prediction_service.py  test_services_serialization.py  test_single_metric.py  test_ui_prediction_result_panels.py  test_ui_query_state.py  test_ui_state.py  test_weighted_score.py
(+361 files in other folders)
