[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "country-compare"
version = "0.1.0"
description = "Country comparison toolkit using standardized long-format metric data."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=3.0.2",
    "pyarrow>=23.0.1",
    "PyYAML>=6.0.3",
    "pydantic>=2.13.2",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "matplotlib>=3.10.8",
    "streamlit>=1.56.0",
]

[project.scripts]
country-compare = "country_compare.cli.main:main"
country-compare-ui = "country_compare.cli.ui:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.3.0",
    "black>=24.0.0",
    "mypy>=1.8.0",
    "httpx>=0.27.0",
]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["country_compare*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
 "unit: fast isolated tests",
 "integration: multi-module or filesystem tests",
 "smoke: high-level demo/app smoke tests",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
strict = false